#102 fixed font size on mobile devices

--- a/static/styles/_blog.scss
+++ b/static/styles/_blog.scss
@@ -43,6 +43,7 @@
     padding-left: 25px;
     li{
       line-height: 1.7;
+      font-size: 14px;
     }
   }
   img{
@@ -60,6 +61,11 @@
     &.left{
       float: left;
       padding-left: 0;
+    }
+    @media screen and (max-width: 400px){
+      &.left, &.right{
+        padding: 20px 10px;
+      }
     }
   }
   blockquote{
